--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -4,56 +4,35 @@
 @tailwind components;
 @tailwind utilities;
 
-body,
-body[data-theme="light"] {
-  --primary: #86caf4;
+@layer base {
+  body,
+  body[data-theme="light"] {
+    --primary: #86caf4;
 
-  --background1: 242 245 247;
-  --background2: #fafafa;
-  --background3: #e5e7eb;
-  --background4: #23374d;
+    --background1: 242 245 247;
+    --background2: #fafafa;
+    --background3: #e5e7eb;
+    --background4: #23374d;
 
-  --text1: #212529;
-  --text2: #2b4f76;
+    --text1: #212529;
+    --text2: #2b4f76;
 
-  --border1: #d7dfe8;
+    --border1: #d7dfe8;
 
-  --markdown-text1: #212529;
-  --markdown-text2: #ec4899;
-  --markdown-background: #e9ecef;
+    --markdown-text1: #212529;
+    --markdown-text2: #ec4899;
+    --markdown-background: #e9ecef;
 
-  --effect1: #569aff;
-  --effect2: #dee2e6;
-}
+    --effect1: #569aff;
+    --effect2: #dee2e6;
+  }
 
-body[data-theme="dark"] {
-  --primary: #c58ff7;
-
-  --background1: 33 37 41;
-  --background2: #343a40;
-  --background3: #373d42;
-  --background4: #444444;
-
-  --text1: #f8f9fa;
-  --text2: #9ca3af;
-
-  --border1: #b4bac2;
-
-  --markdown-text1: #f8f9fa;
-  --markdown-text2: #c58ff7;
-  --markdown-background: #2d3236;
-
-  --effect1: #569aff;
-  --effect2: #495057;
-}
-
-@media (prefers-color-scheme: dark) {
-  body {
+  body[data-theme="dark"] {
     --primary: #c58ff7;
 
-    --background1: #212529;
+    --background1: 33 37 41;
     --background2: #343a40;
-    --background3: #21252980;
+    --background3: #373d42;
     --background4: #444444;
 
     --text1: #f8f9fa;
@@ -68,66 +47,205 @@ body[data-theme="dark"] {
     --effect1: #569aff;
     --effect2: #495057;
   }
-}
 
-body {
-  margin: 0;
-  font-size: 16px;
-  line-height: 1.4;
+  @media (prefers-color-scheme: dark) {
+    body {
+      --primary: #c58ff7;
 
-  background-color: var(--background1);
+      --background1: #212529;
+      --background2: #343a40;
+      --background3: #21252980;
+      --background4: #444444;
 
-  @apply transition-[background-color];
-}
+      --text1: #f8f9fa;
+      --text2: #9ca3af;
 
-a {
-  color: inherit;
-  text-decoration: none;
-  outline: none;
-}
+      --border1: #b4bac2;
 
-* {
-  box-sizing: border-box;
-}
+      --markdown-text1: #f8f9fa;
+      --markdown-text2: #c58ff7;
+      --markdown-background: #2d3236;
 
-html {
-  -webkit-text-size-adjust: none;
-  -moz-text-size-adjust: none;
-  -o-text-size-adjust: none;
+      --effect1: #569aff;
+      --effect2: #495057;
+    }
+  }
 
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
-}
+  body {
+    margin: 0;
+    font-size: 16px;
+    line-height: 1.4;
 
-html,
-body,
-#__next {
-  height: 100%;
-}
+    background-color: var(--background1);
 
-input,
-textarea,
-button {
-  appearance: none;
-  -moz-appearance: none;
-  -webkit-appearance: none;
-  border-radius: 0;
-  -webkit-border-radius: 0;
-  -moz-border-radius: 0;
-}
+    overflow-y: overlay;
 
-input:focus-visible {
-  outline: 0;
+    @apply transition-[background-color];
+  }
+
+  a {
+    color: inherit;
+    text-decoration: none;
+    outline: none;
+  }
+
+  * {
+    box-sizing: border-box;
+  }
+
+  html {
+    -webkit-text-size-adjust: none;
+    -moz-text-size-adjust: none;
+    -o-text-size-adjust: none;
+
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+  }
+
+  html,
+  body {
+    height: 100%;
+  }
+
+  input,
+  textarea,
+  button {
+    appearance: none;
+    -moz-appearance: none;
+    -webkit-appearance: none;
+    border-radius: 0;
+    -webkit-border-radius: 0;
+    -moz-border-radius: 0;
+  }
+
+  input:focus-visible {
+    outline: 0;
+  }
+
+  ::-webkit-scrollbar {
+    @apply h-2 w-2;
+  }
+
+  ::-webkit-scrollbar-thumb {
+    background-color: theme(textColor.secondary);
+
+    @apply rounded-lg border-4 border-solid border-transparent outline-none transition-[background-color];
+  }
+
+  ::-webkit-scrollbar-track {
+    background-color: theme(backgroundColor.primary);
+
+    @apply shadow-none transition-[background-color];
+  }
 }
 
 @layer components {
   .frame {
-    @apply relative mx-auto my-0 box-border w-[980px] lg:w-full lg:px-4 lg:py-0;
+    width: theme(screens.lg.max);
+    @apply relative mx-auto my-0 box-border lg:w-full lg:px-4 lg:py-0;
   }
 
   .menu {
     @apply m-0 w-[130px] list-none rounded-md bg-secondary p-2 shadow-md transition-[background-color,box-shadow];
+  }
+
+  .markdown {
+    @apply select-text break-words text-base;
+
+    & > *:first-child {
+      @apply mt-0;
+    }
+
+    & p {
+      @apply relative;
+    }
+
+    & td {
+      @apply border-[1px] border-solid border-gray-500;
+    }
+
+    & pre {
+      color: theme(textColor.primary);
+
+      @apply break-all rounded-lg transition-[color];
+
+      & .token {
+        background: none !important;
+      }
+    }
+
+    & ul {
+      @apply list-disc;
+    }
+
+    & ol {
+      @apply list-decimal;
+    }
+
+    & ul,
+    & ol {
+      @apply list-outside pl-8;
+    }
+
+    & li {
+      @apply mb-3;
+    }
+
+    & h1,
+    & h2,
+    & h3,
+    & h4,
+    & h5,
+    & h6,
+    & p,
+    & td,
+    & ul,
+    & ol {
+      color: theme(textColor.primary);
+
+      @apply break-all transition-[color];
+    }
+
+    & p,
+    & ul,
+    & ol,
+    & table,
+    & blockquote,
+    & pre {
+      @apply mb-6;
+    }
+
+    & h1,
+    & h2,
+    & h3,
+    & h4,
+    & h5,
+    & h6,
+    & strong {
+      @apply mx-0 mb-1 mt-3 font-bold;
+    }
+
+    & h1 {
+      @apply mt-11 text-3xl;
+    }
+    & h2 {
+      @apply mb-6 mt-10 text-2xl;
+    }
+    & h3 {
+      @apply mb-5 mt-9 text-xl;
+    }
+    & h4 {
+      @apply mb-4 mt-8 text-lg;
+    }
+
+    & > p:has(> img) {
+      @apply flex;
+    }
+
+    & a {
+      @apply text-teal-400 hover:underline;
+    }
   }
 }
