--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -78,7 +78,7 @@
 
     background-color: var(--background1);
 
-    overflow-y: overlay;
+    overflow: overlay;
 
     @apply transition-[background-color];
   }
@@ -107,6 +107,8 @@
   html,
   body {
     height: 100%;
+
+    @apply bg-primary;
   }
 
   input,
@@ -131,13 +133,7 @@
   ::-webkit-scrollbar-thumb {
     background-color: theme(textColor.secondary);
 
-    @apply rounded-lg border-4 border-solid border-transparent outline-none transition-[background-color];
-  }
-
-  ::-webkit-scrollbar-track {
-    background-color: theme(backgroundColor.primary);
-
-    @apply shadow-none transition-[background-color];
+    @apply rounded-lg;
   }
 }
 
